[package]
name = "privacy-pools-sdk"
version = "0.1.0"
description = "Rust SDK for Privacy Pools clients, proving, recovery, and transaction planning"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/privacy-pools-sdk"
readme = "../../README.md"
keywords = ["privacy", "zero-knowledge", "ethereum", "sdk"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
local-mnemonic = ["privacy-pools-sdk-signer/local-mnemonic"]
dangerous-key-export = ["privacy-pools-sdk-signer/dangerous-key-export"]
local-signer-client = ["privacy-pools-sdk-chain/local-signer-client"]

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
privacy-pools-sdk-artifacts = { version = "0.1.0", path = "../privacy-pools-sdk-artifacts" }
privacy-pools-sdk-chain = { version = "0.1.0", path = "../privacy-pools-sdk-chain" }
privacy-pools-sdk-circuits = { version = "0.1.0", path = "../privacy-pools-sdk-circuits" }
privacy-pools-sdk-core = { version = "0.1.0", path = "../privacy-pools-sdk-core" }
privacy-pools-sdk-crypto = { version = "0.1.0", path = "../privacy-pools-sdk-crypto" }
privacy-pools-sdk-prover = { version = "0.1.0", path = "../privacy-pools-sdk-prover" }
privacy-pools-sdk-recovery = { version = "0.1.0", path = "../privacy-pools-sdk-recovery" }
privacy-pools-sdk-signer = { version = "0.1.0", path = "../privacy-pools-sdk-signer" }
privacy-pools-sdk-tree = { version = "0.1.0", path = "../privacy-pools-sdk-tree" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
alloy-sol-types.workspace = true
async-trait.workspace = true
hex.workspace = true
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
trybuild.workspace = true
tokio.workspace = true

[lints]
workspace = true
